[gd_scene load_steps=4 format=3 uid="uid://cf4yknb808q7d"]

[ext_resource type="Theme" uid="uid://1adxjbws8hdd" path="res://editor/editor_theme.tres" id="1_c1q41"]
[ext_resource type="Script" uid="uid://8a5fyrrv22bm" path="res://editor/base/state_panel.gd" id="2_7caf4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7caf4"]

[node name="StatePanel" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c1q41")
script = ExtResource("2_7caf4")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7caf4")

[node name="panelContainer" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 0

[node name="LineContainer" type="Control" parent="Panel/panelContainer"]
anchors_preset = 0

[node name="nodeContainer" type="Control" parent="Panel/panelContainer"]
anchors_preset = 0
